# PGR-project

./: .gitignore  CMakeLists.txt  README.md
libs/SDL-release-2.30.9/VisualC/SDL/Win32/Debug/SDL2.tlog/: CL.command.1.tlog
libs/SDL-release-2.30.9/VisualC/SDLtest/Win32/Debug/SDL2test.tlog/: SDL2test.lastbuildstate
libs/SDL2CPP/src/SDL2CPP/: MainLoop.cpp
libs/imguiSDL2Dormon/: CMakeUtils.cmake
libs/json/: CMakeLists.txt
libs/stb_image/: CMakeLists.txt  impl.cpp
libs/tiny_gltf/: CMakeLists.txt  impl.cpp
src/GMU/: CMakeLists.txt
src/GS/: CMakeLists.txt  geometryShaders.cpp  gsFrostBunny.cpp  gsWireBunny.cpp
src/LKG/: CMakeLists.txt  renderHoloFocus.cpp
src/MISC/: CMakeLists.txt
src/PGP/: CMakeLists.txt  README.md  homework1.cpp  homework2.cpp  homework3.cpp  homework4.cpp  homework5.cpp
src/PGP/homeworks/: README.md  homework1.cpp  homework2.cpp  homework3.cpp
src/PGR/: CMakeLists.txt
src/PGR/01/: gsFrostBunny.cpp  gsWireBunny.cpp  task.cpp  tsCircleBunny.cpp
src/PGR/02/: blending.cpp  model.cpp  srgb.cpp  texture.cpp
src/PGR/03/: shadowVolume.cpp  shadowedModel.cpp  twoTriangles.cpp
src/TS/: CMakeLists.txt  bezierSurf.cpp  tessellationLevels.cpp  tsCircleBunny.cpp
src/framework/: CMakeLists.txt  OpenGLState.cpp  defineGLSLVersion.cpp  main.cpp  makeProgram.cpp  model.cpp
src/student/: CMakeLists.txt  blorb.cpp  blorb.hpp  blorbidle.glb  coat.cpp  gltf_custom.hpp  gorro.cpp  hatblorb.cpp  hatblorb.hpp  model_parser.h  project.cpp  rechiarreglo.fbx  robe.cpp  witch.cpp
